@@ -11,6 +11,11 @@ cdebconf (0.57) UNRELEASED; urgency=low
     - When templates or questions database are missing, debconf exits
       with a return code set to 1.
       Closes: #213165
+    - Fix text and button placement in the newt frontend to prevent
+      text overlap.  Closes: #225968
+      When backup is disabled, the <Continue> button is now centered.
+      The <Yes>/<No> buttons in boolean questions are separated from
+      the <Go Back> button.
 
  -- Denis Barbier <barbier@debian.org>  Tue,  2 Mar 2004 21:34:59 +0100
 
